align fix

--- a/easy_version/style.css
+++ b/easy_version/style.css
@@ -77,7 +77,7 @@ span a{
 	position: relative;
 	font: 16px/16px roboto-regular, arial, sans-serif;
 	top: -20px;
-	left:570px;
+	left:577px;
 }
 .search #box{
 	width:543px;
